# src/controllers/usuarioController.js
@@ -1,0 +1,68 @@
+const Usuario = require('../models/usuarioModel');
+
+// Criar um novo usuário
+exports.criarUsuario = async (req, res) => {
+  try {
+    const { nome, email, senha } = req.body;
+    const usuario = await Usuario.create({ nome, email, senha });
+    res.status(201).json(usuario);
+  } catch (error) {
+    console.error('Erro ao criar usuário:', error);
+    res.status(500).json({ error: 'Erro ao criar usuário' });
+  }
+};
+
+// Listar todos os usuários
+exports.listarUsuarios = async (req, res) => {
+  try {
+    const usuarios = await Usuario.findAll();
+    res.json(usuarios);
+  } catch (error) {
+    console.error('Erro ao listar usuários:', error);
+    res.status(500).json({ error: 'Erro ao listar usuários' });
+  }
+};
+
+// Buscar usuário por ID
+exports.buscarUsuarioPorId = async (req, res) => {
+  try {
+    const { id_usuario } = req.params;
+    const usuario = await Usuario.findByPk(id_usuario);
+    if (!usuario) return res.status(404).json({ error: 'Usuário não encontrado' });
+    res.json(usuario);
+  } catch (error) {
+    console.error('Erro ao buscar usuário:', error);
+    res.status(500).json({ error: 'Erro ao buscar usuário' });
+  }
+};
+
+// Atualizar usuário por ID
+exports.atualizarUsuario = async (req, res) => {
+  try {
+    const { id_usuario } = req.params;
+    const { nome, email, senha } = req.body;
+    const usuario = await Usuario.findByPk(id_usuario);
+    if (!usuario) return res.status(404).json({ error: 'Usuário não encontrado' });
+
+    await usuario.update({ nome, email, senha });
+    res.json(usuario);
+  } catch (error) {
+    console.error('Erro ao atualizar usuário:', error);
+    res.status(500).json({ error: 'Erro ao atualizar usuário' });
+  }
+};
+
+// Deletar usuário por ID
+exports.deletarUsuario = async (req, res) => {
+  try {
+    const { id_usuario } = req.params;
+    const usuario = await Usuario.findByPk(id_usuario);
+    if (!usuario) return res.status(404).json({ error: 'Usuário não encontrado' });
+
+    await usuario.destroy();
+    res.json({ message: 'Usuário deletado com sucesso' });
+  } catch (error) {
+    console.error('Erro ao deletar usuário:', error);
+    res.status(500).json({ error: 'Erro ao deletar usuário' });
+  }
+};
