# src/models/tarefaModel.js
@@ -1,51 +1,48 @@
-const pool = require('../config/db');
+const { DataTypes } = require('sequelize');
+const sequelize = require('../../config/sequelize');
+const Usuario = require('./usuarioModel');
 
-class TarefaModel {
-  static async criarTarefa({ titulo, descricao, data_vencimento, status, id_usuario }) {
-    const query = `
-      INSERT INTO tarefas (titulo, descricao, data_criacao, data_vencimento, status, id_usuario)
-      VALUES ($1, $2, NOW(), $3, $4, $5) RETURNING *;
-    `;
-    const values = [titulo, descricao, data_vencimento, status, id_usuario];
+const Tarefa = sequelize.define('Tarefa', {
+  id_tarefa: {
+    type: DataTypes.INTEGER,
+    primaryKey: true,
+    autoIncrement: true,
+  },
+  titulo: {
+    type: DataTypes.STRING,
+    allowNull: false,
+  },
+  descricao: {
+    type: DataTypes.STRING,
+    allowNull: true,
+  },
+  data_criacao: {
+    type: DataTypes.DATE,
+    defaultValue: DataTypes.NOW,
+  },
+  data_vencimento: {
+    type: DataTypes.DATE,
+  },
+  status: {
+    type: DataTypes.STRING,
+    allowNull: false,
+  },
+  id_usuario: {
+    type: DataTypes.INTEGER,
+    allowNull: false,
+    references: {
+      model: Usuario,
+      key: 'id_usuario',
+    },
+    onUpdate: 'CASCADE',
+    onDelete: 'CASCADE',
+  },
+}, {
+  tableName: 'tarefas',
+  timestamps: false,
+});
 
-    const { rows } = await pool.query(query, values);
-    return rows[0];
-  }
+Tarefa.belongsTo(Usuario, { foreignKey: 'id_usuario' });
+Usuario.hasMany(Tarefa, { foreignKey: 'id_usuario' });
 
-  static async editarTarefa(id_tarefa, { titulo, descricao, data_vencimento, status }) {
-    const query = `
-      UPDATE tarefas SET titulo = $1, descricao = $2, data_vencimento = $3, status = $4
-      WHERE id_tarefa = $5 RETURNING *;
-    `;
-    const values = [titulo, descricao, data_vencimento, status, id_tarefa];
-
-    const { rows } = await pool.query(query, values);
-    return rows[0];
-  }
-
-  static async deletarTarefa(id_tarefa) {
-    const query = `
-      DELETE FROM tarefas WHERE id_tarefa = $1 RETURNING *;
-    `;
-    const values = [id_tarefa];
-
-    const { rows } = await pool.query(query, values);
-    return rows[0] || null;
-  }
-
-  static async listarTarefas() {
-    const query = 'SELECT * FROM tarefas ORDER BY data_criacao DESC;';
-    const { rows } = await pool.query(query);
-    return rows;
-  }
-
-  static async buscarTarefaPorId(id_tarefa) {
-    const query = 'SELECT * FROM tarefas WHERE id_tarefa = $1;';
-    const values = [id_tarefa];
-
-    const { rows } = await pool.query(query, values);
-    return rows[0] || null;
-  }
-}
-
-module.exports = TarefaModel;
+module.exports = Tarefa;
