# src/models/usuarioModel.js
@@ -1,0 +1,31 @@
+const { DataTypes } = require('sequelize');
+const sequelize = require('../../config/sequelize');
+
+const Usuario = sequelize.define('Usuario', {
+  id_usuario: {
+    type: DataTypes.INTEGER,
+    primaryKey: true,
+    autoIncrement: true,
+  },
+  nome: {
+    type: DataTypes.STRING,
+    allowNull: false,
+  },
+  email: {
+    type: DataTypes.STRING,
+    allowNull: false,
+    unique: true,
+    validate: {
+      isEmail: true,
+    },
+  },
+  senha: {
+    type: DataTypes.STRING,
+    allowNull: false,
+  }
+}, {
+  tableName: 'usuarios',
+  timestamps: false,
+});
+
+module.exports = Usuario;
